<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello"></string>
	<string name="app_name">Манджа</string>
	<string name="refresh">Обнови</string>
	<string name="toggleTheme">Смени темата</string>
	<string name="recipes">Рецепти</string>
	<string name="spices">Подправки</string>
	<string name="making">Приготвяне</string>
	<string name="notes">Бележки</string>
	<string name="products">Продукти</string>
	<string name="loading">Зареждане…</string>
	<string name="loadingMoreListFooter">Зареждане на още…</string>
	<string name="loadingRecipes">Зареждане на рецепти…</string>
	<string name="loadingRecipe">Зареждане на рецепта…</string>
	<string name="latestRecipe">Последна рецепта</string>
	<string name="latestRecipes">Последни</string>
	<string name="latestRecipesLong">Последни рецепти</string>
	<string name="allRecipes">Всички</string>
	<string name="allRecipesLong">Всички рецепти</string>
	<string name="categoriesRecipes">Категории</string>
	<string name="subCategoriesRecipes">Подкатегории</string>
	<string name="nextpage">следваща страница</string>
	<string name="usefull">Полезно</string>
	<string name="advices">Съвети</string>
	<string name="dictionary">Речник</string>
	<string name="settings">Настройки</string>
	<string name="cacheAll">Свали рецептите локално</string>
	<string name="tenRecipes">10 рецепти от</string>
	<string name="favorites">Любими</string>
	<string name="recipeOfTheDay">Рецепта на деня</string>
	<string name="ok">OK</string>
	<string name="cancel">Отказ</string>
	<string name="search">Търсене</string>
	<string name="searchByProducts">Търсене по продукти</string>
	<string name="addProductOrSpice">Добави продукт или подправка</string>
	<string name="delete">Изтриване</string>
	<string name="about">За програмата</string>
	<string name="about_header">Манджа - програмата за рецепти (в. %s)</string>
	<string name="about_writer_name">Писач: Венцислав Младенов</string>
	<string name="about_idea">По идея на LG и Санома Блясък България</string>
	<string name="about_email"><u>ventsislav.mladenov@gmail.com</u></string>
	<string name="about_content_information">Програмата използва информация от сайта </string>
	<string name="about_site_name"><u>www.gotvetesmen.com</u></string>
	<string name="share_title">Сподели чрез</string>		
	<string name="information">Информация</string>
	<string name="enterProducts">Моля въведете продукти!</string>
	<string name="tools">Инструменти</string>
	<string name="shoppingList">Списък за пазаруване</string>
	<string name="newShoppingList">Нов списък</string>
	<string name="oldShoppingLists">Списъци</string>
	<string name="shoppingLists">Списъци за пазаруване</string>
	<string name="save">Запази</string>
	<string name="addNewShoppingList">Създаване на нов списък</string>
	<string name="addNewShoppingListItem">Добави нов продукт</string>
	<string name="title">Име</string>
	<string name="enterTitle">Моля въведете име на списъка</string>
	<string name="enterTime">Моля въведете време</string>
	<string name="coockingTimer">Часовник за готвене</string>
	<string name="startTimer">Стартирай</string>
	<string name="stopTimer">Спри</string>
	<string name="startTimerMinutes">00:00 минути</string>
	<string name="alphabetSorting">По азбучен ред</string>
	<string name="noSorting">Без подреждане</string>
	<string name="addRating">Задайте рейтинг</string>
	<string name="empty"></string>
    <string name="cacheImages">Запазвай локално</string>
    <string name="downloadImages">Сваляй снимки на храните</string>
    <string name="downloadOnlyOnWiFi">Сваляй само при WiFi връзка</string>
    <string name="downloadThumbnails">Сваляй малките снимки</string>
    <string name="downloadBigImages">Сваляй големите снимки</string>
    <string name="image">Снимка</string>
    <string name="add">Добави</string>
    <string name="initialize">Инициализиране</string>
    <string name="copy_db">Копиране на базата ...</string>
    <string name="prepare_time">Подготовка:</string>
    <string name="cook_time">Готвене:</string>
    <string name="portions">Порции:</string>
</resources>
