<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="match_parent" android:id="@+id/linearLayout1">
		<ImageView android:layout_height="wrap_content" android:src="@drawable/icon"
			android:layout_marginBottom="5dip" android:layout_marginTop="5dip"
			android:layout_marginLeft="5dip" android:layout_width="wrap_content"
			android:id="@+id/imageView1" android:layout_marginRight="5dip"></ImageView>
		<TextView android:layout_height="wrap_content"
			android:layout_marginLeft="5dip" android:id="@+id/textView1"
			android:layout_gravity="center" android:text="@string/about"
			android:layout_width="wrap_content" android:textStyle="bold" android:textColor="#FFFFFFFF"></TextView>
	</LinearLayout>
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/about_header"
		android:layout_gravity="center_horizontal" android:layout_marginTop="5dip" android:textColor="#FFFFFFFF" android:id="@+id/txtTitleVersion"></TextView>
	<TextView android:id="@+id/textView3" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
		android:text="@string/about_writer_name" android:layout_marginTop="5dip" android:textColor="#FFFFFFFF"></TextView>
	<TextView android:id="@+id/txtAboutEmail" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_marginTop="5dip"
		android:layout_gravity="center_horizontal" android:textColor="#FF0000FF" 
		android:text="@string/about_email"></TextView>
	<TextView android:id="@+id/textView5" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_marginTop="5dip"
		android:layout_gravity="center_horizontal" android:text="@string/about_idea" android:textColor="#FFFFFFFF"></TextView>
	<TextView android:layout_height="wrap_content" android:id="@+id/textView6"
		android:layout_gravity="center_horizontal" android:text="@string/about_content_information"
		android:layout_marginTop="5dip" android:layout_width="wrap_content" android:textColor="#FFFFFFFF"></TextView>
	<TextView android:layout_height="wrap_content" android:id="@+id/txtSite"
		android:layout_width="wrap_content" android:text="@string/about_site_name"
		android:layout_marginTop="5dip" android:layout_gravity="center_horizontal"
		android:textColor="#FF0000FF"></TextView>
	<Button android:id="@+id/bOk" android:layout_height="wrap_content" android:text="@string/ok" android:layout_width="fill_parent" android:layout_marginTop="10dip"></Button>
</LinearLayout>
