<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="match_parent" android:id="@+id/linearLayout1">
		<ImageView android:layout_height="wrap_content" android:src="@drawable/list"
			android:layout_marginBottom="5dip" android:layout_marginTop="5dip"
			android:layout_marginLeft="5dip" android:layout_width="wrap_content"
			android:id="@+id/imageView1" android:layout_marginRight="5dip"></ImageView>
		<TextView android:layout_height="wrap_content"
			android:layout_marginLeft="5dip" android:id="@+id/textView1"
			android:layout_gravity="center" android:text="@string/enterTitle"
			android:layout_width="wrap_content" android:textStyle="bold"></TextView>
	</LinearLayout>
	<EditText android:layout_width="match_parent"
		android:layout_height="wrap_content" android:text="@string/empty"
		android:id="@+id/edtTitle"></EditText>
	<Button android:layout_width="match_parent"
		android:layout_height="wrap_content" android:text="@string/ok"
		android:id="@+id/bTitleOk"></Button>
</LinearLayout>
